@@ -55,6 +55,8 @@ http://svn.edgewall.org/repos/babel/tags/1.0.0/
  * add babel.support.NullTranslations class similar to gettext.NullTranslations
    but with all of Babel's new *gettext methods (#277)
  * "init" and "update" commands support "--width" option (#284)
+ * fix 'input_dirs' option for setuptools integration (#232, initial patch by 
+   Étienne Bersac)
 
 
 Version 0.9.6
